--- a/project_1/index.html
+++ b/project_1/index.html
@@ -157,25 +157,25 @@
                         <img src="img/bosch.png" width="126" height="37" alt="Bosch">
                     </a>
                     <a href="#">
-                        <img src="img/Makita.png" width="123" height="40" alt="Makita">
+                        <img src="img/makita.png" width="123" height="40" alt="Makita">
                     </a>
                     <a href="#">
-                        <img src="img/DeWALT.png" width="146" height="44" alt="DeWalt">
+                        <img src="img/dewalt.png" width="146" height="44" alt="DeWalt">
                     </a>
                     <a href="#">
                         <img src="img/intersckol.png" width="184" height="32" alt="Интерскол">
                     </a>
                     <a href="#">
-                        <img src="img/Hitachi.png" width="169" height="31" alt="Hitachi">
+                        <img src="img/hitachi.png" width="169" height="31" alt="Hitachi">
                     </a>
                     <a href="#">
-                        <img src="img/LG.png" width="121" height="73" alt="LG">
+                        <img src="img/lg.png" width="121" height="73" alt="LG">
                     </a>
                     <a href="#">
-                        <img src="img/AEG.png" width="151" height="84" alt="AEG">
+                        <img src="img/aeg.png" width="151" height="84" alt="AEG">
                     </a>
                     <a href="#">
-                        <img src="img/Metabo.png" width="155" height="55" alt="Metabo">
+                        <img src="img/metabo.png" width="155" height="55" alt="Metabo">
                     </a>
                 </article>
             </section>
