--- a/project_1/index.html
+++ b/project_1/index.html
@@ -103,8 +103,8 @@
                             <a class="sliders-item-btn" href="#">Открыть каталог</a>
                         </div>
                     </div>
-                    <button class="slider-btn-prev"></button>
-                    <button class="slider-btn-next"></button>
+                    <button class="slider-btn-prev">Назад</button>
+                    <button class="slider-btn-next">Вперёд</button>
                 </article>
                 <article class="item item-delivery">
                     <b>Доставка</b>
